org.mmisw.ontmd: Ontology Metadata Manager and Voc2RDF
Carlos Rueda  -  http://marinemetadata.org

ChangeLog

2009-04-06
	Fixed issue #119: "Allow empty fields in non-required columns"
	This also required to generate "" column values for the missing fields so the original
	voc2rdf scheme to make the conversion (which is based on the com.infomata.data library)
	works with no ArrayOutOfBoundsException's. 
	
2009-04-01
	- setReadOnly(!enabled) instead of setEnabled(enabled) for text fields; this allows the
	  user to select the text even if it's not editable.

2009-03-31    voc2rdf 1.2.0.beta2
	- oops, I introduced a bug with my latest changes: individuales were not put in the
	  namespace appropriately (I forgot to use the namespace (_ns) in Converter.createIndividual()
	  after the change in getGoodName(), which now does not include the namespace itself)
	  -> fixed.
	  
	
2009-03-28,29:   voc2rdf 1.2.0.beta1

	- Many updates to Voc2RDF
		- More metadata captured (title, creator, description, authority)
		- Button convert to RDF now opens a dialog (No tab for conversion)
		- class & terms now in a tab (in preparation for multiple classes)
				
		- New editable, spreadsheet-like table for the terms:
			- The editable table is now the main interface for capturing the terms
			- A new CSV button displays the current table in CSV format; the user
			  can use the text area to update the contents and re-import into the table.

		
2009-03-21
	Issue 99: "Normalize theme/topic/class throughout interface"
	http://code.google.com/p/mmisw/issues/detail?id=99
	
	Renamings before actual change to the function of the code:
	- "shortName" is actually "resourceType: The current "shortName"-based names in the
	  code actually refer to the "resourceType" concept. (But note that OmvMmi.shortNameUri
	  refers to the URI of the resource type (captured in Omv.acronym).)
	- "mainClass" also refers to "resourceType"
	So the renamings were applied in these places: